Issue #180. Update navbar and touch-header shadings. Remove navbar gap.

--- a/src/scss/components/_library.scss
+++ b/src/scss/components/_library.scss
@@ -7,6 +7,10 @@
 		display: flex;
 		width: 100%;
 	}
+
+	> .touch-header {
+		background-color: mix($shade-10, $touch-header-bg, 2%);
+	}
 }
 
 .items {
