--- a/src/scss/components/item/_details.scss
+++ b/src/scss/components/item/_details.scss
@@ -42,6 +42,10 @@
 		}
 	}
 
+	.touch-header {
+		background-color: mix($shade-10, $touch-header-bg, 2%);
+	}
+
 	.panel-header {
 		@include touch-or-bp-down(sm) {
 			display: none;
