--- a/src/scss/themes/_light.scss
+++ b/src/scss/themes/_light.scss
@@ -80,7 +80,7 @@ $icon-color-touch:  $link-color;
 $icon-active-color: $shade-9;
 
 // Navbar
-$navbar-bg:                       $shade-1;
+$navbar-bg:                       $body-bg;
 $navbar-nav-mobile-bg:            $shade-2;
 $navbar-border-color:             $shade-0;
 $navbar-link-color:               $shade-8;
@@ -172,6 +172,7 @@ $spinner-color: $secondary;
 // Touch header
 $touch-header-color:      $shade-8; // Better than $shade-6 to link color
 $touch-header-link-color: $blue;
+$touch-header-bg:         $shade-1;
 $btn-options-color:       $secondary;
 $btn-options-bg:          $transparent;
 $btn-options-focus-color: rgba($btn-options-color, 0.5);
